Regenerated services with new templates.